--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="bower_components/ng-img-crop/compile/minified/ng-img-crop.css">
     <link rel="stylesheet" type="text/css" href="bower_components/AngularJS-Toaster/toaster.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/ng-table/bundles/ng-table.min.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/ui-bootstrap4/dist/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Own styles -->
@@ -67,6 +68,7 @@
     <script type="text/javascript" src="js/controller/modal.autor.controller.js"></script>
     <script type="text/javascript" src="js/controller/etiqueta.controller.js"></script>
     <script type="text/javascript" src="js/controller/modal.etiqueta.controller.js"></script>
+    <script type="text/javascript" src="js/controller/etiquetas_sol.controller.js"></script>
     <!-- Components -->
     <script type="text/javascript" src="js/components/formEtiqueta/etiqueta.component.js"></script>
     <script type="text/javascript" src="js/components/formAutor/autor.component.js"></script>
